chore: add account controller
