# docs/swagger.json
@@ -15,6 +15,46 @@
     },
     "host": "localhost:7011",
     "paths": {
+        "/api/v1/accounts/signin": {
+            "post": {
+                "description": "回傳 user token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "get user token",
+                "parameters": [
+                    {
+                        "description": "參數",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.PostSigninBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/model.UserSignInResponseObject"
+                        }
+                    },
+                    "403": {
+                        "description": "err.Error()",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/users/": {
             "get": {
                 "description": "取得 user 列表",
@@ -223,6 +263,21 @@
                 }
             }
         },
+        "model.PostSigninBody": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "model.RowsAffectedModel": {
             "type": "object",
             "properties": {
@@ -292,6 +347,14 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/model.User"
+                }
+            }
+        },
+        "model.UserSignInResponseObject": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "object"
                 }
             }
         }
